--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cached_network_image: ^0.5.1
   flutter_staggered_grid_view: ^0.2.5
   flutter_advanced_networkimage: any
+  intl: ^0.15.7
 
 
 dev_dependencies:
