--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.2.5
   flutter_advanced_networkimage: any
   intl: ^0.15.7
+  url_launcher: ^4.0.3
 
 
 dev_dependencies:
